--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </style>
 </head>
 <body>
-<form action="action_page.php" method="post">
+<form>
     <div class="imgcontainer">
         <img src="img_avatar2.png" alt="Avatar" class="avatar">
     </div>
